tests/a/tests/integrity/fail/match/match.1.stderr
error: expected {a}{a}, found {a}{a,bin}
  --> tests/integrity/fail/match/match.1.rs:24:22
   |
24 |             let y_ = y;
   |                      ^
